# defence-lab

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: phase1.yaml
defense_lab/: __init__.py  logging_utils.py
defense_lab/annotations/: __init__.py  auto_mask.py  engine.py  pseudo_label.py  refinement.py  vlm_labeler.py
defense_lab/benchmarks/: __init__.py  sam2_inference.py  sam2_video.py
defense_lab/config/: __init__.py  base.py
defense_lab/datasets/: __init__.py  coco.py  hf_seg.py  types.py  vdd.py  video.py
defense_lab/diagnostics/: __init__.py  attention.py  gpu.py  precision.py
defense_lab/evaluation/: __init__.py  evaluator.py  methods.py  metrics.py
defense_lab/lora/: __init__.py  inject.py  layers.py  losses.py  prompt_tuning.py  trainer.py
defense_lab/prompting/: __init__.py  prompts.py
defense_lab/repro/: __init__.py  env.py  experiment.py  seed.py
defense_lab/segmentation/: __init__.py  interactive.py  predictor.py  trainable.py
defense_lab/temporal/: __init__.py  (+1 more)
papers/: README.md
scripts/: airstrip_benchmark.py  airstrip_prompt_eval.py  benchmark_hf_dataset.py  benchmark_vdd.py  build_airstrip_dataset.py  dashboard.py  download_checkpoints.sh  install_sam2.sh  landuse_experiment.py  learned_localizer.py  localization_pr.py  lora_hf.py  lora_vdd.py  no_oracle_eval.py  phase1_env_check.py  phase1_sam2_bench.py  phase2_promptable_demo.py  phase3_data_engine.py  phase4_lora_finetune.py  phase5_temporal.py  phase6_evaluate.py  prompt_tuning_xdataset.py  self_training_vdd.py  vlm_label_demo.py  youtube_ingest.py
(+6 files in other folders)
